# ztl-maps

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  LICENSE.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
release/: README.md
src/api/: endpoints.py
src/data_storage/: persistence.py
src/data_storage/cities/: ATTRIBUTION.md  bologna.json  turin.json
src/models/: city.py  restriction.py  zone.py
src/open_street_map/: map.py  visualizer.py
src/scrapers/: base_scraper.py  utils.py
src/scrapers/city_specific/: __init__.py  bologna.py  florence.py  milan.py  naples.py  turin.py
src/scrapers/city_specific/ztl_coordinates/: ATTRIBUTION.md  florence.json  milan.json  naples.json
src/scripts/: visualize_ztl_zones.py
tests/api/: test_endpoints.py
tests/data_storage/: test_persistence.py
tests/models/: test_city.py  test_restriction.py  test_zone.py
tests/open_street_map/: test_map.py  test_visualizer.py
tests/scrapers/: test_base_scraper.py  test_utils.py
tests/scrapers/city_specific/: test_bologna_scraper.py  test_florence_scraper.py  test_milan_scraper.py  test_naples_scraper.py  test_turin_scraper.py
