[project]
name = "ztl-maps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.19.5",
    "selenium>=4.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]
lint = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "D",    # pydocstyle
]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "ignore:.*:DeprecationWarning",
    "ignore:.*:UserWarning",
    "ignore:.*:FutureWarning",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
omit = [
    "__init__.py",
    "__main__.py",
    "src/version.py",
    "src/main.py",
]
fail_under = 90
